fix(datetime): Adjust z-index to not show borders

--- a/packages/design-system/src/custom/_forms.scss
+++ b/packages/design-system/src/custom/_forms.scss
@@ -108,6 +108,10 @@ input::placeholder {
 .calendar {
   @extend .text-center;
 
+  div[role="dialog"]:has(> &) {
+    z-index: $zindex-tooltip;
+  }
+
   cursor: unset;
 
   & > thead > .header {
